--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Resume</title>
+  <title>DevFolio Bootstrap Template</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -96,7 +96,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="C:\Users\deepu\Downloads\myphoto1.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -104,7 +104,7 @@
                       <p><span class="title-s">Name: </span> <span>Ithihas</span></p>
                       <p><span class="title-s">Profile: </span> <span>Student</span></p>
                       <p><span class="title-s">Email: </span> <span>ithihasmekala99@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>-----</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
                     </div>
                   </div>
                 </div>
@@ -140,7 +140,20 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    I am a Computer Science Engineer. I have knowledge on python, HTML, CSS.
+                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
+                    imperdiet et, porttitor
+                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
+                    porttitor accumsan tincidunt.
+                  </p>
+                  <p class="lead">
+                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
+                    porttitor volutpat. Vestibulum
+                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                  </p>
+                  <p class="lead">
+                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+                    Nulla porttitor accumsan
+                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
                   </p>
                 </div>
               </div>
@@ -284,8 +297,8 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">15</p>
-              <span class="counter-text">YEARS OF EXPERIENCE</span>
+              <p class="counter">0</p>
+              <span class="counter-text">NO EXPERIENCE</span>
             </div>
           </div>
         </div>
@@ -296,7 +309,7 @@
             </div>
             <div class="counter-num">
               <p class="counter">550</p>
-              <span class="counter-text">TOTAL CLIENTS</span>
+              <span class="counter-text"></span>
             </div>
           </div>
         </div>
